Archive2/4a/b2e5fcaed3e7f3/main.cpp
#include <iostream>

using namespace std;

template<typename T>
int search(T items[], int first, int last, T searchItem){
    
}

template<typename T>
int insert(T items[], int& size, T insertItem){
    
}

template<typename T>
class TreeNode<T>{
    
};

template<typename T>
TreeNode<T>* search(TreeNode<T>*& root, T searchItem){
    
}

template<T>* insert(TreeNode<T>*& root, T searchItem){
    
}

//TEST CODE FOR ABOVE IMPLEMENTATIONS

int main(){
    
    return 0;
}
